--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Calculator by coderSamrat.dev</title>
+    <link rel="stylesheet" href="./External/style.css">
 </head>
 <body>
     <div class="calculator">
         <input type="text" id="inputBox" placeholder="0">
         <div class="firstrow">
             <button class="operators" id="allclear" onclick="allclearfun()">AC</button>
-            <!-- <button class="operators" id="clear2" onclick="clear2fun()">DEL2</button> -->
             <button class="operators" id="percent" onclick="percentfun()">%</button>
             <button class="operators" id="clear" onclick="clearfun()">DEL</button>
             <button class="operators" id="divide" onclick="divfun()">/</button>
@@ -41,6 +40,6 @@
             <button class="ans" id="equal" onclick="ansfun()">=</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./External/script.js"></script>
 </body>
 </html>
