--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator by coderSamrat.dev</title>
     <link rel="stylesheet" href="./External/style.css">
-    <link rel="shortcut icon" href="./External/icon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./External/Calculator-icon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="calculator">
